--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ let ctx = can.getContext("2d");
 
 let screen;
 
-ImgMap = new Image(); ImgMap.src = "Map.png";
+ImgMap = new Image(); ImgMap.src = "map.png";
 
 let size = 32;
 
