--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
+
 <canvas id="can"></canvas>
 
 <style>
