--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
 <div id="footer"></div> 
         
 <link rel="stylesheet" href="代表検定.css">
+<link rel=”stylesheet” href=”https://senpan-0426.github.io/three/style.css”/>
 <script src="代表検定.js"></script>
         
