--- a/index.html
+++ b/index.html
@@ -88,16 +88,15 @@ body {
     left:50%;
     width:80%;
     transform:translate(-50%,0%);
-    text-align: left; /* テキストは左揃え */
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1500px) {
     #questionBtn1 {
         position:absolute;
         white-space:nowrap;
         background-color:#faf391;
         top:45%;
-        width:500px;
+        width:25vh;
         transform:translate(-50%,0%);
         font-family:serif;
         font-size:2vh;
@@ -108,7 +107,7 @@ body {
         white-space:nowrap;
         background-color:#faf391;
         top:55%;
-        width:500px;
+        width:25vh;
         transform:translate(-50%,0%);
         font-family:serif;
         font-size:2vh;
@@ -119,7 +118,7 @@ body {
         white-space:nowrap;
         background-color:#faf391;
         top:65%;
-        width:500px;
+        width:25vh;
         transform:translate(-50%,0%);
         font-family:serif;
         font-size:2vh;
@@ -130,24 +129,25 @@ body {
         white-space:nowrap;
         background-color:#faf391;
         top:75%;
-        width:500px;
+        width:25vh;
         transform:translate(-50%,0%);
         font-family:serif;
         font-size:2vh;
     }
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 1500px) {
     #questionBtn1 {
         position:absolute;
         white-space:nowrap;
         background-color:#faf391;
         top:50%;
         left:25%;
-        width:500px;
+        width:30vw;
+        height:5vh;
         transform:translate(-50%,0%);
         font-family:serif;
-        font-size:2vh;
+        font-size:2.5vh;
     }
 
     #questionBtn2 {
@@ -156,10 +156,11 @@ body {
         background-color:#faf391;
         top:50%;
         left:75%;
-        width:500px;
+        width:30vw;
+        height:5vh;
         transform:translate(-50%,0%);
         font-family:serif;
-        font-size:2vh;
+        font-size:2.5vh;
     }
     
     #questionBtn3 {
@@ -168,10 +169,11 @@ body {
         background-color:#faf391;
         top:60%;
         left:25%;
-        width:500px;
+        width:30vw;
+        height:5vh;
         transform:translate(-50%,100%);
         font-family:serif;
-        font-size:2vh;
+        font-size:2.5vh;
     }
     
     #questionBtn4 {
@@ -180,12 +182,14 @@ body {
         background-color:#faf391;
         top:60%;
         left:75%;
-        width:500px;
+        width:30vw;
+        height:5vh;
         transform:translate(-50%,100%);
         font-family:serif;
-        font-size:2vh;
+        font-size:2.5vh;
     }
 }
+
 
     </style>
 </head>
