--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@ body {
     height:100%;
 }
 
-
+#header {
+    position:absolute;
+    background-color:#A9D18E;
+    top:0px;
+    left:0px;
+    width:100%;
+    height:10%;
+    border-bottom:5px solid rgb(208,169,0);
+}
 
 #footer {
     position:absolute;
