--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 
 body {
     margin:0px;
+    background-color:#E2F0D9;
 }
 
 #back {
     position:relative;
-    background-color:#E2F0D9;
+    background-color: transparent;
     width:100%;
     height:100%;
 }
