--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <style>
         .center {
     text-align:  center;        /* 中央寄せ */
@@ -14,6 +13,7 @@
 body {
     margin:0px;
     background-color:#E2F0D9;
+    overflow: hidden;
 }
 
 #back {
@@ -23,29 +23,6 @@ body {
     height:100%;
 }
 
-#header {
-    position:absolute;
-    background-color:#A9D18E;
-    top:0px;
-    left:0px;
-    width:100%;
-    height:10%;
-    border-bottom:5px solid rgb(208,169,0);
-}
-
-#footer {
-    position:absolute;
-    background-color:#A9D18E;
-    top:90%;
-    left:0px;
-    width:100%;
-    height:10%;
-    border-top:5px solid rgb(208,169,0);
-}
-
-#Title { 
-    display:none;
-}
 
 
 #titleText {
@@ -68,10 +45,6 @@ body {
     transform:translate(-50%,0%);
     font-family:serif;
     font-size:3vh;
-}
-
-#Question { 
-    display:none;
 }
 
 #questionNum {
