--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     text-align:  center;        /* 中央寄せ */
     background-color:  #ddd;    /* 背景色指定 */
     height: 100px;              /* 高さ指定 */
+    background-color: transparent;
   }
 
 body {
@@ -23,7 +24,25 @@ body {
     height:100%;
 }
 
+#header {
+    position:absolute;
+    background-color:#A9D18E;
+    top:0px;
+    left:0px;
+    width:100%;
+    height:10%;
+    border-bottom:5px solid rgb(208,169,0);
+}
 
+#footer {
+    position:absolute;
+    background-color:#A9D18E;
+    top:90%;
+    left:0px;
+    width:100%;
+    height:10%;
+    border-top:5px solid rgb(208,169,0);
+}
 
 #titleText {
     position:absolute;
@@ -169,11 +188,10 @@ body {
 </head>
 <body>
     <div id="back"></div>
-
-    <div id="Title">
-        <h1 id="titleText">代表検定</h1>
-        <button id="startBtn">タップしてスタート</button>
-    </div>
+        <h1 id="titleText" class="Title">代表検定</h1>
+        <button id="startBtn" class="Title">タップしてスタート</button>
+    </div> 
+        
 
     <div id="Question" class="center">
         <h1 id="questionNum"></h1>
@@ -255,7 +273,8 @@ body {
 
         let Phase = 0;
 
-        let Title = document.getElementById("Title");
+        let Title1 = document.getElementsByClassName("Title")[0];
+        let Title2 = document.getElementsByClassName("Title")[1];
         let startBtn = document.getElementById("startBtn");
 
         let Question = document.getElementById("Question");
@@ -276,12 +295,14 @@ body {
 
         function Timer() {
 
-            Title.style.display = "none";
+            Title1.style.display = "none";
+            Title2.style.display = "none";
             Question.style.display = "none";
 
             switch (Phase) {
                 case 0:
-                    Title.style.display = "block"
+                    Title1.style.display = "block";
+                    Title2.style.display = "block"
                     break;
                 case 1:
                 case 2:
