--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@ body {
 
 #img{
     position:absolute;
-    width:100px;
-    height:100px;
+    width:3vw;
+    height:3vh;
     top:75%;
     left:65%;
 }
