--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@ body {
 
 #img{
     position:absolute;
-    width:24vh;
-    height:12vh;
+    width:40px;
+    height:20px;
     top:75%;
     left:65%;
 }
