--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ body {
             ["代表の身長と体重は？"],
             ["代表の得意教科は？"],
             ["代表の中学時代に振られた場所は？"],
-            ["代表が中学時代告白前にやらかしたことは？"],
+            ["代表が初彼女の前でやらかしたことは？"],
             ["代表の仮免のテストの点数は？"]
         ]
 
